--- a/allmychanges/static/allmychanges/stylus/components/logo.styl
+++ b/allmychanges/static/allmychanges/stylus/components/logo.styl
@@ -1,6 +1,16 @@
 .logo {
+    white-space: nowrap;
+
     &__text {
-        font-size: 2em
+        @media (max-width: 640px) {
+            font-size: 24px;
+            line-height: 24px;
+            margin-top: 24px;
+        }
+        @media (min-width: 640px) {
+            font-size: 32px;
+            line-height: 32px;
+        }
         font-family: header-font
         color: yellow-color;
     }
@@ -13,6 +23,10 @@
       position: relative;
       top: -16px;
       left: -6px;
+      @media (max-width: 640px) {
+          width: 24px;
+          height: 24px;
+      }
     }
     &__link:hover {
         color: light-red-color;
